--- a/helloworld/src/main/webapp/WEB-INF/templates/page2.html
+++ b/helloworld/src/main/webapp/WEB-INF/templates/page2.html
@@ -2,10 +2,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Page1</title>
+    <title>Page2</title>
 </head>
 <body>
-<h1>Page 1</h1>
-<a th:href="@{/target}">访问目标页面page2.html</a>
+<h1>Page 2</h1>
+<a th:href="@{/}">返回首页</a>
 </body>
 </html>
